--- a/main.yml
+++ b/main.yml
@@ -1,8 +1,6 @@
 ---
-- hosts: docker host
-  remote_user: jenkins
-  become: yes
-  become_method: sudo
+- hosts: docker host  
+  become: yes  
   tasks:
     - name: Install pip
       yum: name=python-pip state=present
@@ -16,4 +14,11 @@
         path: docker
         state: build
 
+    - name: Running the container
+      docker_container:
+        image: web:latest
+        path: docker
+        state: running
     
+    - name: check if container is running
+      shell: docker ps
