--- a/main.yml
+++ b/main.yml
@@ -3,7 +3,7 @@
   become: yes  
   tasks:
     - name: Install pip
-      yum: name=python-pip state=present
+      yum: name=python3-pip state=present
 
     - name: install docker-py package
       pip: name=docker-py
