--- a/main.yml
+++ b/main.yml
@@ -6,7 +6,7 @@
       yum: name=python3-pip state=present
 
     - name: install docker-py package
-      pip: name=docker-py
+      pip: name=docker-py state=absent
     
     - name: Build Docker image from Dockerfile
       docker_image:
