using different syntax in hosts section of playbook

--- a/hosts_file.yml
+++ b/hosts_file.yml
@@ -1,6 +1,6 @@
 ---
 - name: testing all ubuntu server
-  hosts: app, db01, lb01
+  hosts: app:db01:lb01
   become: true
   tasks:
     - name: update hosts file in /etc/hosts
