change syntax of hosts back to coma and replace key=ansible_lsb

--- a/group_by.yml
+++ b/group_by.yml
@@ -3,12 +3,8 @@
   hosts: all
   tasks: 
     - name: group host by app_type
-      group_by: key={{ app_type }}
+      group_by: key={{ ansible_lsb }}
 
     - name: message by groups
       debug: msg="groups={{groups}}"
-      run_once: true
-
-    - name: message play_hosts 
-      debug: msg="play_hosts={{ play_hosts }}"
       run_once: true
