change syntax of hosts back to coma and replace key=ansible_lsb

--- a/group_by.yml
+++ b/group_by.yml
@@ -3,7 +3,8 @@
   hosts: all
   tasks: 
     - name: group host by app_type
-      group_by: key={{ ansible_lsb }}
+      group_by: 
+        key: {{ ansible_lsb }}
 
     - name: message by groups
       debug: msg="groups={{groups}}"
