--- a/hostname.yml
+++ b/hostname.yml
@@ -1,6 +1,7 @@
 ---
 - hosts: all
   tasks:
-    - command: hostname
+    - name: get server hostname
+      command: hostname
       register: hostname
     - debug: msg={{ hostname.stdout_lines }}
