--- a/loadbalancer.yml
+++ b/loadbalancer.yml
@@ -1,9 +1,9 @@
 ---
 - hosts: lb01
+  become: true
   tasks: 
     - name: install nginx
       apt: 
         name: nginx
         state: present
         update_cache: yes
-        
