--- a/webserver.yml
+++ b/webserver.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: install apache2
       apt: 
-        name: {{ packages }}
+        name: "{{ packages }}"
         state: present
         update_cache: yes
       vars:
