--- a/webserver.yml
+++ b/webserver.yml
@@ -2,7 +2,7 @@
 - hosts: app
   become: true
   tasks:
-    - name: install apache2
+    - name: install web components
       apt: 
         name: "{{ packages }}"
         state: present
