--- a/loadbalancer.yml
+++ b/loadbalancer.yml
@@ -14,6 +14,9 @@
         state: absent
       register: apache_removed
 
+    - name: msg apache absent
+      debug: msg={{ apache_removed }}
+
     - name: install nginx
       apt: 
         name: nginx
