--- a/loadbalancer.yml
+++ b/loadbalancer.yml
@@ -14,6 +14,12 @@
         state: absent
       register: apache_removed   
 
+    - name: restart apache2 service
+      service:
+        name: apache2
+        state: restarted
+      when: apache_removed.changed
+
     - name: install nginx
       apt: 
         name: nginx
