--- a/webserver.yml
+++ b/webserver.yml
@@ -14,3 +14,9 @@
           - python-pip
           - python-virtualenv
 
+    - name: ensure apache2 started
+      service: 
+        name: apache2
+        state: started
+        enable: yes
+
