add service mysql started

--- a/database.yml
+++ b/database.yml
@@ -8,5 +8,12 @@
         state: present
         update_cache: yes
 
+    - name: ensure mysql started
+      service:
+        name: mysql
+        state: started
+        enabled: yes
+
+
 
   
