--- a/webserver.yml
+++ b/webserver.yml
@@ -32,6 +32,20 @@
         name: wsgi
       notify: restart apache2
 
+    - name: copy demo app source
+      copy:
+        src: demo/app/
+        dest: /var/www/demo 
+        mode: '755'
+      notify: restart apache2
+
+    - name: copy apache virtual host config
+      copy:
+        src: demo/demo.conf
+        dest: /etc/apache2/sites-available
+        mode: '755'
+      notify: restart apache2
+
   handlers:
     - name: restart apache2
       service: 
