install pip dependencies from /var/www/demo/requirements.txt and install virtualenv in /var/www/demo/.venv

--- a/webserver.yml
+++ b/webserver.yml
@@ -46,6 +46,11 @@
         mode: '755'
       notify: restart apache2
 
+    - name: setup python virualenv 
+      pip: requirements=/var/wwww/demo/requirements.txt virtualenv=/var/www/demo/.venv
+      notify: restart apache2 
+
+
   handlers:
     - name: restart apache2
       service: 
