--- a/loadbalancer.yml
+++ b/loadbalancer.yml
@@ -33,20 +33,21 @@
         mode: "644"
       notify: restart nginx
 
-  #   - name: de-activate default nginx site
-  #     file:
-  #       path: /etc/nginx/sites-enabled/default
-  #       state: absent
-  #     notify: restart nginx
+    - name: de-activate default nginx site
+      file:
+        path: /etc/nginx/sites-enabled/default
+        state: absent
+      notify: restart nginx
 
-  #   - name: activate demo site
-  #     file:
-  #       src: /etc/nginx/sites-available/demo
-  #       dest: /etc/nginx/sites-enabled/demo
-  #       state: link
-  #     notify: restart nginx
+    - name: activate demo site
+      file:
+        src: /etc/nginx/sites-available/demo
+        dest: /etc/nginx/sites-enabled/demo
+        state: link
+      notify: restart nginx
 
-  # handlers: restart nginx
-  # service:
-  #   name: nginx
-  #   state: restarted
+  handlers: 
+    - name: restart nginx
+      service:
+        name: nginx
+        state: restarted
