--- a/stack_status.yml
+++ b/stack_status.yml
@@ -5,14 +5,30 @@
     - name: verify nginx service
       command: systemctl status nginx
 
+    - name: verify nginx is listening on 80
+      wait_for:
+        port: 80
+        timeout: 1
+
 - hosts: app
   become: true
   tasks:
     - name: verify apache2 service
       command: systemctl status apache2
 
+    - name: verify apache2 is listening on 80
+      wait_for:
+        port: 80
+        timeout: 1
+
 - hosts: db01
   become: true
   tasks:
     - name: verify mysql service
       command: systemctl status mysql
+
+    - name: verify mysql is listening on 80
+      wait_for:
+        port: 3306
+        timeout: 1
+
