--- a/stack_restart.yml
+++ b/stack_restart.yml
@@ -6,12 +6,18 @@
     - service: 
         name: nginx
         state: stopped
+    - wait_for:
+        port: 80
+        state: drained
 
 - hosts: app
   become: true
   tasks:
     - service: 
         name: apache2
+        state: stopped
+    - wait_for:
+        port: 80
         state: stopped
         
 # database is restarted and not stopped because since we are starting up services we need database to bootstrap the app once is back
@@ -21,6 +27,9 @@
     - service: 
         name: mysql
         state: restarted
+    - wait_for:
+        port: 3306
+        state: started
 # Bring stack up 
 - hosts: app
   become: true
@@ -28,11 +37,17 @@
     - service: 
         name: apache2
         state: started
+    - wait_for:
+        port: 80
+        state: started
 
 - hosts: lb01
   become: true
   tasks:
     - service: 
         name: nginx
+        state: started
+    - wait_for:
+        port: 80
         state: started
 
