--- a/database.yml
+++ b/database.yml
@@ -10,6 +10,8 @@
       vars:
         packages:
           - python-mysqldb
+          - python-httplib2
+          - curl 
 
     - name: install mysql-server
       apt:
