--- a/stack_status.yml
+++ b/stack_status.yml
@@ -32,6 +32,35 @@
         port: 3306
         timeout: 1
 
-    
+    - name: verify end-to-end response
+      uri:
+        url: http://"{{ item }}" 
+        return_content: yes
+      loop:
+        - groups.lb01
+      register: lb_index
+
+    - fail:
+        msg: "index failed to return content"
+      when: "'Hello, from sunny' not in item.content"
+      loop:
+        - "{{ lb_index.results }}"
  
 
+- hosts: lb01 
+  become: true
+  tasks:
+    - name: verify backend response
+      uri:
+        url: http://"{{ item }}" 
+        return_content: yes
+      loop:
+        - groups.app
+      register: app_index
+
+    - fail:
+        msg: "index failed to return content"
+      when: "'Hello, from sunny {{ item.item }}' not in item.content"
+      loop:
+        - "{{ app_index.results }}"
+        
