--- a/stack_status.yml
+++ b/stack_status.yml
@@ -32,6 +32,9 @@
         port: 3306
         timeout: 1
 
+- hosts: 192.168.0.194
+  become: true
+  tasks:
     - name: verify end-to-end response
       uri:
         url: http://"{{ item }}" 
