add logic to check backend services from db01 and lb01

--- a/stack_status.yml
+++ b/stack_status.yml
@@ -40,7 +40,7 @@
         url: http://"{{ item }}" 
         return_content: yes
       with_items:
-        - groups.lb01
+        - "{{ groups.lb01 }}"
       register: lb_index
 
     - fail:
@@ -58,7 +58,7 @@
         url: http://"{{ item }}" 
         return_content: yes
       loop:
-        - groups.app
+        - "{{ groups.app }}"
       register: app_index
 
     - fail:
