--- a/control.yml
+++ b/control.yml
@@ -3,7 +3,8 @@
   become: true
   tasks:
     - name: install tools
-      apt: name={{item}} state=present update_cache=yes
+      yum: name={{item}} state=present update_cache=yes
       with_items:
         - curl
         - python-httplib2
+        
