--- a/stack_status.yml
+++ b/stack_status.yml
@@ -37,7 +37,8 @@
   tasks:
     - name: verify end-to-end response
       uri: url=http://{{item}} return_content=yes
-      with_items: groups.lb01
+      with_items: 
+        - 192.168.0.192
       register: lb_index
 
     - fail: msg="index failed to return content"
