--- a/stack_status.yml
+++ b/stack_status.yml
@@ -44,3 +44,17 @@
     - fail: msg="index failed to return content"
       when: "'Hello, from sunny' not in item.content"
       with_items: "{{lb_index.results}}"
+
+- hosts: lb01
+  become: true
+  tasks:
+    - name: verify backend response
+      uri: url=http://{{item}} return_content=yes
+      with_items: 
+        - "{{ groups.app }}"
+       
+      register: app_index
+
+    - fail: msg="index failed to return content"
+      when: "'Hello, from sunny {{ item.item }}!' not in item.content"
+      with_items: "{{app_index.results}}"
