--- a/stack_status.yml
+++ b/stack_status.yml
@@ -56,5 +56,5 @@
       register: app_index
 
     - fail: msg="index failed to return content"
-      when: "'Hello, from sunny {{ item.item }}!' not in item.content"
+      when: "'Hello, from sunny' not in item.content"
       with_items: "{{app_index.results}}"
