--- a/control.yml
+++ b/control.yml
@@ -1,10 +1,6 @@
 ---
 - hosts: localhost
   become: true
-  tasks:
-    - name: install tools
-      yum: name={{item}} state=present update_cache=yes
-      with_items:
-        - curl
-        - python-httplib2
+  role:
+    - control
         
