--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,2 +1,47 @@
 ---
 # tasks file for mysql
+- name: install tools
+  apt:
+    name: "{{ packages }}"
+    state: present
+    update_cache: yes
+  vars:
+    packages:
+      - python-mysqldb
+      - python-httplib2
+      - curl 
+
+- name: install mysql-server
+  apt:
+    name: mysql-server
+    state: present
+    update_cache: yes
+
+- name: ensure mysql listening on all ports
+  lineinfile: 
+    dest: /etc/mysql/mysql.conf.d/mysqld.cnf 
+    regexp: ^bind-address 
+    line: "bind-address = 0.0.0.0"
+  notify: restart mysql
+
+- name: ensure mysql started
+  service:
+    name: mysql
+    state: started
+    enabled: yes
+
+- name: create demo database
+  mysql_db:
+    name: demo
+    state: present
+  notify: restart mysql
+
+- name: create demo user
+  mysql_user:
+    name: demo
+    password: demo
+    priv: demo.*:ALL
+    host: '%'
+    state: present
+    login_port: 3306
+  notify: restart mysql
