--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,2 +1,53 @@
 ---
-# tasks file for nginx
+- name: install tools
+  apt:
+    name: "{{ packages }}"
+    state: present
+    update_cache: yes
+  vars:
+    packages:
+      - python-httplib2
+
+- name: ensure apache2 is stop
+  service:
+    name: apache2
+    state: stopped
+    enabled: no
+
+- name: ensure apache2 is removed
+  apt:
+    name: apache2
+    state: absent
+    register: apache_removed
+
+- name: install nginx
+  apt:
+    name: nginx
+    state: present
+    update_cache: yes
+
+- name: configure nginx site
+  template:
+    src: nginx.conf.j2
+    dest: /etc/nginx/sites-available/demo
+    mode: "644"
+  notify: restart nginx
+
+- name: de-activate default nginx site
+  file:
+    path: /etc/nginx/sites-enabled/default
+    state: absent
+  notify: restart nginx
+
+- name: activate demo site
+  file:
+    src: /etc/nginx/sites-available/demo
+    dest: /etc/nginx/sites-enabled/demo
+    state: link
+  notify: restart nginx
+
+- name: ensure nginx started
+  service:
+    name: nginx
+    state: started
+    enabled: yes
