--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -20,6 +20,10 @@
     state: absent
   register: apache_removed
 
+- name: debug apache2 removal
+  debug:
+    msg: "{{ apache_removed }}"
+
 - name: install nginx
   apt:
     name: nginx
