--- a/roles/apache2/tasks/main.yml
+++ b/roles/apache2/tasks/main.yml
@@ -1,2 +1,39 @@
 ---
-# tasks file for apache2
+- name: PHP | Install Ondrej PHP PPA
+  apt_repository: 
+    repo: 'ppa:ondrej/php' 
+    update_cache: yes
+        
+- name: install web components
+  apt: 
+    name: "{{ packages }}"
+    state: present
+    update_cache: yes
+  vars:
+    packages:
+      - apache2
+      - libapache2-mod-wsgi
+      - python-pip
+      - python-virtualenv
+      - php7.2
+      - python-mysqldb
+      - python-httplib2
+      - curl 
+
+- name: ensure mod_wsgi installed
+  apache2_module: 
+    state: present
+    name: wsgi
+  notify: restart apache2
+
+- name: de-activate default apache site
+  file:
+    path: /etc/apache2/sites-enabled/000-default.conf
+    state: absent
+  notify: restart apache2
+
+- name: ensure apache2 started
+  service: 
+    name: apache2
+    state: started
+    enabled: yes
