--- a/webserver.yml
+++ b/webserver.yml
@@ -1,82 +1,7 @@
 ---
 - hosts: app
   become: true
-  tasks:
-    - name: PHP | Install Ondrej PHP PPA
-      apt_repository: 
-        repo: 'ppa:ondrej/php' 
-        update_cache: yes
-        
-    - name: install web components
-      apt: 
-        name: "{{ packages }}"
-        state: present
-        update_cache: yes
-      vars:
-        packages:
-          - apache2
-          - libapache2-mod-wsgi
-          - python-pip
-          - python-virtualenv
-          - php7.2
-          - python-mysqldb
-          - python-httplib2
-          - curl 
+  roles:
+    - apache2 
+    - demo_app
 
-    - name: ensure apache2 started
-      service: 
-        name: apache2
-        state: started
-        enabled: yes
-
-    - name: ensure mod_wsgi enabled
-      apache2_module: 
-        state: present
-        name: wsgi
-      notify: restart apache2
-
-    - name: copy demo app source
-      copy:
-        src: demo/app/
-        dest: /var/www/demo 
-        mode: '755'
-      notify: restart apache2
-
-    - name: copy apache virtual host config
-      copy:
-        src: demo/demo.conf
-        dest: /etc/apache2/sites-available
-        mode: '755'
-      notify: restart apache2
-
-    - name: install requirements out of virtualenv
-      pip:
-        requirements: /var/www/demo/requirements.txt
-
-    - name: setup python virualenv
-      become: true 
-      pip: 
-        requirements: /var/www/demo/requirements.txt
-        virtualenv: /var/www/demo/.venv
-      notify: restart apache2
-
-    - name: de-activate default apache site
-      file:
-        path: /etc/apache2/sites-enabled/000-default.conf
-        state: absent
-      notify: restart apache2 
-
-    - name: activate demo apache site
-      file: 
-        src: /etc/apache2/sites-available/demo.conf
-        dest: /etc/apache2/sites-enabled/demo.conf
-        state: link
-      notify: restart apache2
-
-
-
-  handlers:
-    - name: restart apache2
-      service: 
-        name: apache2
-        state: restarted
