--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -21,7 +21,7 @@
   lineinfile: 
     dest: /etc/mysql/mysql.conf.d/mysqld.cnf 
     regexp: ^bind-address 
-    line: "bind-address = 0.0.0.0"
+    line: "bind-address = {{ ansible_default_ipv4.address }}"
   notify: restart mysql
 
 - name: ensure mysql started
