add host to stack status and restart to find only expected ip address ansible_default_ipv4.address

--- a/stack_status.yml
+++ b/stack_status.yml
@@ -29,6 +29,7 @@
 
     - name: verify mysql is listening on 80
       wait_for:
+        host: "{{ ansible_default_ipv4.address }}"
         port: 3306
         timeout: 1
 
