--- a/stack_restart.yml
+++ b/stack_restart.yml
@@ -28,6 +28,7 @@
         name: mysql
         state: restarted
     - wait_for:
+        host: "{{ ansible_default_ipv4.address }}"
         port: 3306
         state: started
 # Bring stack up 
