--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -30,18 +30,18 @@
     state: started
     enabled: yes
 
-- name: create demo database
+- name: create database
   mysql_db:
-    name: demo
+    name: "{{ db_name }}"
     state: present
   notify: restart mysql
 
-- name: create demo user
+- name: create user
   mysql_user:
-    name: demo
-    password: demo
-    priv: demo.*:ALL
-    host: '%'
+    name: "{{ db_username }}"
+    password: "{{ db_user_password }}"
+    priv: "{{ db_name }}.*:ALL"
+    host: "{{ db_user_host }}"
     state: present
     login_port: 3306
   notify: restart mysql
