set variables in roles as well as defauls - roles has precedence

--- a/database.yml
+++ b/database.yml
@@ -2,7 +2,7 @@
 - hosts: db01
   become: true
   roles:
-    - mysql
+    - { role: mysql, db_name: demo, db_username: demo, db_user_password: demo, db_user_host: '%' }
  
     
       
