--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -28,14 +28,14 @@
   apt:
     name: nginx
     state: present
-    update_cache: yes
-  
+    update_cache: yes  
 
-- name: configure nginx site
+- name: configure nginx sites
   template:
     src: nginx.conf.j2
-    dest: /etc/nginx/sites-available/demo
+    dest: /etc/nginx/sites-available/"{{ item.key }}"
     mode: "644"
+  with_dict: sites
   notify: restart nginx
 
 - name: de-activate default nginx site
@@ -44,11 +44,12 @@
     state: absent
   notify: restart nginx
 
-- name: activate demo site
+- name: activate nginx sites
   file:
-    src: /etc/nginx/sites-available/demo
-    dest: /etc/nginx/sites-enabled/demo
+    src: /etc/nginx/sites-available/"{{ item.key }}"
+    dest: /etc/nginx/sites-enabled/"{{ item.key }}"
     state: link
+  with_dict: sites
   notify: restart nginx
 
 - name: ensure nginx started
