--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -33,7 +33,7 @@
 - name: configure nginx sites
   template:
     src: nginx.conf.j2
-    dest: /etc/nginx/sites-available/"{{ item.key }}"
+    dest: /etc/nginx/sites-available/{{ item.key }}
     mode: "644"
   with_dict: "{{ sites }}"
   notify: restart nginx
@@ -46,8 +46,8 @@
 
 - name: activate nginx sites
   file:
-    src: /etc/nginx/sites-available/"{{ item.key }}"
-    dest: /etc/nginx/sites-enabled/"{{ item.key }}"
+    src: /etc/nginx/sites-available/{{ item.key }}
+    dest: /etc/nginx/sites-enabled/{{ item.key }}
     state: link
   with_dict: "{{ sites }}"
   notify: restart nginx
