--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -38,10 +38,16 @@
   with_dict: "{{ sites }}"
   notify: restart nginx
 
-- name: de-activate default nginx site
+- name: get active sites
+  shell: ls -1 /etc/nginx/sites-enabled
+  register: active
+
+- name: de-activate nginx sites
   file:
-    path: /etc/nginx/sites-enabled/default
+    path: /etc/nginx/sites-enabled/{{ item }}
     state: absent
+  with_items: active.stdout_lines
+  when: item not in sites
   notify: restart nginx
 
 - name: activate nginx sites
