add task to delete active sites not in sites dict

--- a/roles/demo_app/tasks/main.yml
+++ b/roles/demo_app/tasks/main.yml
@@ -27,6 +27,12 @@
     mode: '755'
   notify: restart apache2
 
+- name: copy demo.wsgi
+  template:
+    src: demo.wsgi.j2
+    dest: /var/www/demo/demo.wsgi
+    mode: '755'
+    
 - name: copy apache virtual host config
   copy:
     src: demo/demo.conf
