--- a/roles/apache2/tasks/main.yml
+++ b/roles/apache2/tasks/main.yml
@@ -1,14 +1,12 @@
 ---
 - name: PHP | Install Ondrej PHP PPA
   apt_repository: 
-    repo: 'ppa:ondrej/php' 
-    update_cache: yes
+    repo: 'ppa:ondrej/php'    
         
 - name: install web components
   apt: 
     name: "{{ packages }}"
-    state: present
-    update_cache: yes
+    state: present    
   vars:
     packages:
       - apache2
@@ -30,46 +28,5 @@
   file:
     path: /etc/apache2/sites-enabled/000-default.conf
     state: absent
-  notify: restart upstream {{ item.key }} {
-{% for server in groups.app %}
-    server {{ server }}:{{ item.value.backend }};
-{% endfor %}
-}
-
-server {
-    listen {{ item.value.frontend }};
-
-    location / {
-        proxy_pass http://{{ item.key }};
-    }
-}
-
-- name: ensure apaupstream {{ item.key }} {
-{% for server in groups.app %}
-    server {{ server }}:{{ item.value.backend }};
-{% endfor %}
-}
-
-server {
-    listen {{ item.value.frontend }};
-
-    location / {
-        proxy_pass http://{{ item.key }};
-    }
-}
-  service: 
-    name: apache2
-    state: startedupstream {{ item.key }} {
-{% for server in groups.app %}
-    server {{ server }}:{{ item.value.backend }};
-{% endfor %}
-}
-
-server {
-    listen {{ item.value.frontend }};
-
-    location / {
-        proxy_pass http://{{ item.key }};
-    }
-}
-    enabled: yes
+  notify: restart apache2 
+    
