--- a/site.yml
+++ b/site.yml
@@ -1,4 +1,13 @@
 ---
+- hosts: app,db01,lb01
+  become: true
+  gather_facts: false
+  tasks:
+    - name: update apt cache
+      apt:
+        update_cache: yes
+        cache_valid_time: 86400
+        
 - include: control.yml
 - include: database.yml
 - include: webserver.yml
