--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -9,7 +9,8 @@
     packages:
       - python-mysqldb
       - python-httplib2
-      - curl 
+      - curl
+  tags: [ 'packages' ]
 
 - name: install mysql-server
   apt:
