--- a/stack_status.yml
+++ b/stack_status.yml
@@ -5,6 +5,7 @@
   tasks:
     - name: verify nginx service
       command: systemctl status nginx
+      changed_when: false
 
     - name: verify nginx is listening on 80
       wait_for:
@@ -17,6 +18,7 @@
   tasks:
     - name: verify apache2 service
       command: systemctl status apache2
+      changed_when: false
 
     - name: verify apache2 is listening on 80
       wait_for:
@@ -28,6 +30,7 @@
   tasks:
     - name: verify mysql service
       command: systemctl status mysql
+      changed_when: false
 
     - name: verify mysql is listening on 80
       wait_for:
