--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -40,6 +40,7 @@
 - name: get active sites
   shell: ls -1 /etc/nginx/sites-enabled
   register: active
+  changed_when: "active.stdout_lines != sites.keys()"
 
 - name: de-activate nginx sites
   file:
