--- a/database.yml
+++ b/database.yml
@@ -1,6 +1,8 @@
 ---
 - hosts: db01
   become: true
+  vars:
+    ansible_default_ipv4: "{{ ansible_default_ipv4.address }}""
   roles:
     - role: mysql
       
